Replace use of :svn: and :trac: with new :git: role.

--- a/doc/templates/layout.html
+++ b/doc/templates/layout.html
@@ -60,8 +60,8 @@
               Development</a></li>
             <li><a href="http://wiki.fysik.dtu.dk/ase/epydoc/ase-module.html">
               Epydoc</a></li>
-            <li><a href="http://trac.fysik.dtu.dk/projects/ase/browser/trunk/">
-              Source code (svn)</a></li>
+            <li><a href="https://gitlab.com/ase/ase">
+              Source code</a></li>
             <li><a href="{{ pathto('bugs') }}">Bugs!</a></li>
             <li><a href="http://trac.fysik.dtu.dk/projects/ase/report/1">
               Bug Tracker</a></li>
